# easyvideotrans

./: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  app.py  check_audio_files.py  check_subtitle_files.py  check_tts_files.py  complete_tts_fallback.py  debug_openai.py  demo_simple_cache.py  docker-compose.yml  fix_translation_cache.py  inference.py  install_xtts_v2.sh  install_xtts_v2_compatible.sh  pyproject.toml  requirements-dev.txt  requirements.txt  start_services.sh  test_audio_crop.py  test_audio_duration_issue.py  test_cosyvoice2.py  test_cosyvoice2_audio.py  test_cosyvoice2_integration.py  test_cosyvoice2_params.py  test_download_validation.py  test_edge_tts_fallback.py  test_frontend_cosyvoice2.html  test_frontend_tts.html  test_gpt_debug.py  test_hardcode_subtitles.py  test_local_gpt.py  test_new_wrapping.py  test_openai_tts.py  test_subtitle_wrapping.py  test_subtitle_wrapping_fix.py  (+8 more)
celery_results/: celery-task-meta-053ae2d4-5c32-4e6b-a7bc-8e505e391422  celery-task-meta-166c4a94-8931-4818-937a-6dea72b395a6  celery-task-meta-3ce78a7b-778c-4219-980c-9266dd41ffc0  celery-task-meta-3e469764-b8cb-49aa-8d9e-35c9c7567639  celery-task-meta-63bd0f60-c67d-4c7f-9f78-bf08a1c05321  celery-task-meta-70897f3d-6dec-49e3-9ed3-de38170d86e8  celery-task-meta-72fd4966-bd26-4c9f-a658-944a3fc24927  celery-task-meta-7b5ec12e-3591-48cf-afe9-91ae1eff196c  celery-task-meta-82f6f973-be06-4eb9-856e-d1e4859acde1  celery-task-meta-83e15ea2-7bc9-4689-9ec2-130f4f1c092e  celery-task-meta-a76fcf2a-76d8-4c67-ae72-67c064b44e6f  (+3 more)
doc/: tts_api.md  (+4 more)
(+23 files in other folders)
