[project]
name = "easyvideotrans"
version = "0.1.0"
description = "EasyVideoTrans - A video translation and voice synthesis application"
requires-python = ">=3.11"
dependencies = [
    "Flask==2.3.3",
    "Werkzeug==2.3.7",
    "celery==5.3.4",
    "pyamqp==2.0.2",
    "prometheus-flask-exporter==0.23.0",
    "prometheus-client==0.19.0",
    "pytubefix==0.0.1",
    "moviepy==1.0.3",
    "faster-whisper==0.10.0",
    "vocal-remover==0.0.1",
    "pydub==0.25.1",
    "librosa==0.10.1",
    "srt==3.4.1",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "edge-tts>=6.1.9",
    "openai>=1.14.0",
    "TTS==0.22.0",
    "googletrans==4.0.0rc1",
    "deepltr==1.2.0",
    "requests>=2.31.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
